@@ -28,17 +28,17 @@ OP (BINOP_IN_BOUNDS)
 OP (TERNOP_IN_RANGE)
 
 /* Ada attributes ('Foo). */
-OP (OP_ATR_FIRST)
-OP (OP_ATR_LAST)
-OP (OP_ATR_LENGTH)
-OP (OP_ATR_IMAGE)
-OP (OP_ATR_MAX)
-OP (OP_ATR_MIN)
-OP (OP_ATR_MODULUS)
-OP (OP_ATR_POS)
-OP (OP_ATR_SIZE)
-OP (OP_ATR_TAG)
-OP (OP_ATR_VAL)
+XOP (OP_ATR_FIRST, "first")
+XOP (OP_ATR_LAST, "last")
+XOP (OP_ATR_LENGTH, "length")
+XOP (OP_ATR_IMAGE, "image")
+XOP (OP_ATR_MAX, "max")
+XOP (OP_ATR_MIN, "min")
+XOP (OP_ATR_MODULUS, "modulus")
+XOP (OP_ATR_POS, "pos")
+XOP (OP_ATR_SIZE, "size")
+XOP (OP_ATR_TAG, "tag")
+XOP (OP_ATR_VAL, "val")
 
 /* Ada type qualification.  It is encoded as for UNOP_CAST, above, 
    and denotes the TYPE'(EXPR) construct. */
